@@ -1,3 +1,6 @@
+2007-4-27
+* PagingEnumerator now supports Marshal.dump and Marshal.load. When marshaled, the enumerator loses its callback, so :auto => true is not supported in this scenario.
+
 2007-02-05
 * :current < 1 is now gracefully handled.  Thanks again to Benjamin Curtis and 21st Century Music.
 
